kubernetes/external-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: default
spec:
  type: ExternalName
  externalName: my-app-service.dev.svc.cluster.local
