kubernetes/flask_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: sameerpatlekar/python-flask-app:v3
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: dev
spec:
  type: clusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: myapp
