kubernetes/flask_service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app
spec:
  type: NodePort
  selector:
    app: my-flask-app
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30007
