kubernetes/mongo-statufulset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: dev
  labels:
    app: mongo
spec:
  ports:
  - port: 27017
    name: mongo
  clusterIP: None
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: dev
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo 
  minReadySeconds:
  template:
    metadata:
      labels:
        app: mongo 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: ebs-claim
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: ebs-claim
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
